<resources>
    <string-array name="supported_languages_names">
        <item>English</item>
        <item>Traditional Chinese</item>
        <item>Japanese</item>
        <item>German</item>
    </string-array>
    <string name="app_name">DrinksMachine</string>
    <string name="diy_button">DIY</string>
    <string name="random_button">Random</string>
    <string name="history_data_button">History</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign UP</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="exit">EXIT</string>
    <string name="cancel_text">Cancel</string>
    <string name="password">Password</string>
    <!-- BarTitle -->
    <string name="title_information">Information</string>
    <string name="title_diyPage">DIY</string>
    <string name="title_login">Log in</string>
    <string name="title_sign">Sign up</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <!-- Choosing page -->
    <string name="plaintext_drink">DRINK</string>
    <string name="plaintext_topping">TOPPING</string>
    <string name="making_my_drink_button">Making My Drink</string>
    <string name="confirm_choice">Confirm Your Choice</string>
    <string name="confirm_button">Confirm</string>
    <string name="reselect">Reselect</string>
    <string name="notSelected">Nothing is Selected !</string>
    <string name="drink_is_empty">Please at Least Select one Drink.</string>
    <!-- FinishPage -->
    <string name="progressPreparing_text">Preparing...</string>
    <string name="progressFinish_text">Enjoy Your Drink</string>
    <string name="home_page_button">＜ HOME PAGE</string>
    <!-- errorCode -->
    <string name="plaintext_error">ERROR!!</string>
    <string name="cannot_over_ten">Can not Over 100%</string>
    <string name="not_done">Not Done, yet !</string>
    <string name="default_text">Default Text</string>
    <string name="chose_a_Class">chose a Class</string>
    <!--Setting-->
    <string name="title_firmwareNumber">firmware no.</string>
    <string name="title_wifi">WiFi</string>
    <string name="title_language">Language</string>
    <string name="title_location">Location</string>
    <string name="title_brightness">Brightness</string>
    <string name="title_need_help">Help</string>
    <!--Tag-->
    <string name="drink_button">Drink</string>
    <string name="topping_button">Topping</string>
    <string name="otherdrink_button">Other Drink</string>
    <string name="dairy_button">Dairy</string>
    <string name="tea_button">Tea</string>
    <string name="juice_button">Juice</string>
    <string name="tapiocapearls_button">Tapioca Pearls</string>
    <string name="fruit_button">Fruit</string>
    <string name="puddingcream_button">Pudding&amp;Cream</string>
    <string name="jelly_button">Jelly</string>
    <string name="grains_button">Grains</string>

</resources>