<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_background"
    tools:context=".MainPage">

    <Button
        android:id="@+id/DiyButton"
        android:layout_width="200sp"
        android:layout_height="80dp"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rectangle_button"
        android:text="@string/diy_button"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/RandomButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/HistoryButton"
        android:layout_width="200sp"
        android:layout_height="80sp"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/rounded_rectangle_button"
        android:text="@string/history_data_button"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RandomButton"
        android:layout_width="200sp"
        android:layout_height="80dp"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_rectangle_button"
        android:text="@string/random_button"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/HistoryButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SettingButton"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/setting_button"
        app:layout_constraintBottom_toTopOf="@+id/InfoButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/InfoButton"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/info_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SignButton"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="26dp"
        android:text="@string/app_name"
        android:textColor="@color/main_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>