<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/box_firmwareNumber"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/simple_button"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title_firmwareNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_firmwareNumber"
                    android:textSize="24sp"
                    android:padding="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_firmwareNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_text"
                    android:textColor="@color/deep_gray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/box_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/simple_button"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="24sp"
                    android:padding="5dp"
                    android:text="@string/title_bluetooth"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_bluetooth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_text"
                    android:textColor="@color/deep_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="   〉"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/box_language"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/simple_button"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="24sp"
                    android:padding="5dp"
                    android:text="@string/title_language"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_text"
                    android:textColor="@color/deep_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="   〉"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/box_location"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/simple_button"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_location"
                    android:textSize="24sp"
                    android:padding="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_text"
                    android:textColor="@color/deep_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="   〉"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/box_brightness"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/simple_button"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/title_brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/title_brightness"
                    android:textSize="24sp"
                    android:padding="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_brightness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_text"
                    android:textColor="@color/deep_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="   〉"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>